--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 streamlit==1.39.0
 pandas==2.2.2
-altair==4.2.2
+altair==5.2.0
 openpyxl==3.1.2
 numpy==1.26.4
+vega-datasets==0.9.0
+typing_extensions==4.12.2
