--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-streamlit==1.39.0
+streamlit==1.35.0
 pandas==2.2.2
-altair==5.2.0
 openpyxl==3.1.2
-numpy==1.26.4
-vega-datasets==0.9.0
-typing_extensions==4.12.2
+altair==5.3.0
+matplotlib==3.8.4
+seaborn==0.13.2
